src/johan_production/objects/User.object
<CustomObject>
    <fields>
        <fullName>Phone_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Phone UUID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>yk__nextAllowedLoginAttemptTime__c</fullName>
        <label>nextAllowedLoginAttemptTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>yk__tempcode__c</fullName>
        <label>tempcode</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yk__tempcode_expiration__c</fullName>
        <label>tempcode_expiration</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>